--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,100 @@
-.App {
+.scroll-view-up {
+  display: none !important;
+}
+
+body::-webkit-scrollbar {
+  width: 0 !important;
+}
+
+
+
+.loadanimespinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -200px;
+  margin-top: -80px;
+  width: 400px;
+  height: 160px;
   text-align: center;
+  font-size: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.loadanimespinner>div {
+  background-color: rgb(0, 121, 107);
+  height: 100%;
+  width: 10px;
+  margin: 0 10px;
+  display: inline-block;
+  -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
+  animation: stretchdelay 1.2s infinite ease-in-out;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.loadanimespinner .rect2 {
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s;
+}
+
+.loadanimespinner .rect3 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+
+.loadanimespinner .rect4 {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
+}
+
+.loadanimespinner .rect5 {
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s;
+}
+
+@-webkit-keyframes stretchdelay {
+
+  0%,
+  40%,
+  100% {
+    -webkit-transform: scaleY(0.4)
+  }
+
+  20% {
+    -webkit-transform: scaleY(1.0)
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+@keyframes stretchdelay {
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  0%,
+  40%,
+  100% {
+    transform: scaleY(0.4);
+    -webkit-transform: scaleY(0.4);
   }
-  to {
-    transform: rotate(360deg);
+
+  20% {
+    transform: scaleY(1.0);
+    -webkit-transform: scaleY(1.0);
   }
 }
+
+a:link {
+  color: #00796b;
+}
+
+/* 未访问的链bai接duzhi */
+a:visited {
+  color: #00796b;
+}
+
+/* 已访问的链接 */
+a:hover {
+  color: #00796b;
+}
+
+/* 鼠标移动到链接上dao */
+a:active {
+  color: #00796b;
+}
+
+/* 选定的链接 */
