修复了切换是否分页时，页数会自动跳转X2的BUG
现在在切换分页时，会卸载再挂载组件，避免了组件内部数值转化时序不错乱导致的页数错误。

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,10 @@ body::-webkit-scrollbar {
   width: 0 !important;
 }
 
-
+.clickableDomOnSelected{
+  transition: all s0.5s ease;
+  border: 1px solid #00bcd4 !important ;
+}
 
 .loadanimespinner {
   position: absolute;
